# articles

./: .gitignore  pyproject.toml
bendfords_law/: README.md  bendford.ipynb  helpers.py
bendfords_law/data/covid/: covid_cases_russia.csv
bendfords_law/tests/: test_helpers.py
