[tool.poetry]
name = "articles"
version = "0.1.0"
description = "Code, figures, data and other supplementary materials to articles authored by Daniel John Varoli"
authors = ["Daniel Varoli <daniel.varoli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
plotly = "^5.7.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
